--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Qi's portfolio</title>
-
+    <meta charset="utf-8" />
   </head>
   <body>
     <h1> A Review </h1>
