--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script src="site.js"></script>
   </head>
   <body>
-    <h1> JS!</h1>
+    <h1>Find my Github User Details</h1>
+    <form id="user-form" method="get" action="#null">
+      <label for="username">Enter Github Username</label>
+      <input type="text" name="username" id="username" />
+      <input type="submit" name="submit" id="submit" value="Find User" />
+    </form>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </html>
