--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Qi's portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, shrink-to-fit=no" />
-    <script src="site.js"></script>
   </head>
   <body>
     <h1>Find my Github User Details</h1>
@@ -13,6 +12,9 @@
       <input type="text" name="username" id="username" />
       <input type="submit" name="submit" id="submit" value="Find User" />
     </form>
+    <ul id="results">
+    </ul>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="site.js"></script>
 </html>
